--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "Flask-WTF >=0.14, <1.0",
     "Flask >=1.1, <2.0",
     "future >=0.18, <1.0",
+    "importlib_metadata >=1.0; python_version<'3.8'",
     "itsdangerous >=1.1, <2.0",
     "Jinja2 >=2.11, <3.0",
     "markdown >=3.3, <4.0",
@@ -55,7 +56,7 @@ dependencies = [
     "Werkzeug >0.14, <2.0",
     "WTForms[email] >=2.1, <3.0",
     "flask_restful >=0.3, <1.0",
-    "flask-marshmallow >=0.10, <1.0",
+    "flask-marshmallow >=0.10, <0.15",
     "marshmallow >=3.0, <4.0",
     "marshmallow-sqlalchemy >0.17, <0.26",
     "flask-uploads >=0.2, <1.0",
@@ -72,6 +73,7 @@ dependencies = [
     "scikit-learn >=1.2.0, <2.0",
     "marshmallow-jsonschema >=0.13.0, <1.0",
     "marshmallow-polyfield >=5.11, <6.0",
+    "setuptools",
 ]
 
 [project.optional-dependencies]
